# PIDX

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .taurignore  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml
docs/: MANUAL.md  pidx-schema-spec.md  pidx-schema.json
docs/archive/: pilot-obs.md  signal-taxonomy.md
docs/prototypes/: personality-indexer-ui.jsx  pidx-diff-visualizer.jsx
examples/: emit_schema.rs
pidx-mcp/: Cargo.toml  pidx-agent-guide.md
pidx-mcp/pidx-pilot/: SKILL.md
pidx-mcp/src/: main.rs  tools.rs
pidx-ui/: README.md  astro.config.mjs  package-lock.json  package.json  svelte.config.js  vite.config.ts
pidx-ui-astro/: package.json
pidx-ui-astro/src-tauri/: Cargo.toml  tauri.conf.json
pidx-ui-astro/src-tauri/src/: commands.rs  lib.rs  main.rs
pidx-ui/src/: app.css
pidx-ui/src-tauri/: .taurignore  Cargo.toml  build.rs  tauri.conf.json
pidx-ui/src-tauri/icons/: icon.icns
pidx-ui/src-tauri/src/: commands.rs  lib.rs
pidx-ui/src/lib/: ipc.ts  profile.ts
pidx-ui/src/lib/components/: DebuggerView.svelte  GardenerView.svelte  InspectorView.svelte  ObservationTable.svelte  RegisterRadar.svelte
pidx-ui/src/routes/: +layout.svelte  +page.svelte
pidx-ui/src/routes/bridge/: +page.svelte
pidx-ui/src/routes/diff/: +page.svelte
pidx-ui/src/routes/profile/[user]/: +page.svelte
src/: ingestion.rs  lib.rs  main.rs  output.rs  storage.rs  traits.rs
src/models/: bridge.rs  confidence.rs  decay.rs  evidence.rs  miin_profile.rs  mod.rs  observation.rs  profile.rs
