[package]
name    = "pidx-ui-svelte"
version = "0.1.0"
edition = "2021"

[lib]
name = "pidx_ui_lib"

[[bin]]
name = "pidx-ui-svelte"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri       = { version = "2", features = ["devtools"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
anyhow      = "1"
uuid        = { version = "1.23", features = ["v4"] }
chrono      = { version = "0.4", features = ["serde"] }
tokio       = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# The pidx library — same workspace, zero overhead
pidx = { path = "../.." }
